# duckypad_daemon

./: .gitignore  Cargo.toml  README.md  manpage
.github/workflows/: cross-build.yml
examples/callbacks/: posix.sh  python.py
examples/window-scripts/: hyprland.sh  sway.sh
src/: hid.rs  lib.rs  main.rs  x11.rs
