[package]
name = "duckypad_daemon"
description = "A profile autoswitcher daemon for dekuNukem's duckypad"
version = "1.0.0"
authors = ["traumweh <contact@traumweh.dev>"]
repository = "https://github.com/traumweh/duckypad_daemon"
homepage = "https://traumweh.dev"
readme = "README.md"
edition = "2021"
license = "Apache-2.0"

[dependencies]
hidapi = "1.4.2"
dirs-next = "2.0.0"
active-win-pos-rs = "0.7"
serde_json = "*"
notify = "4.0.0"
clap = { version = "4.0.18", features = ["derive"] }
sysinfo = "0.28.4"
