[package]
name = "duckypad_daemon"
description = "A profile autoswitcher daemon for dekuNukem's duckypad"
version = "1.0.1"
authors = ["traumweh <contact@traumweh.dev>"]
repository = "https://github.com/traumweh/duckypad_daemon"
homepage = "https://lilith.codes"
readme = "README.md"
edition = "2021"
license = "Apache-2.0"

[dependencies]
hidapi = "2.3.1"
dirs-next = "2.0.0"
active-win-pos-rs = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.2.5", features = ["derive"] }
sysinfo = "0.28.4"
