[package]
name = "duckypad_daemon"
description = "A profile autoswitcher daemon for dekuNukem's duckypad"
version = "1.0.2"
authors = ["traumweh <contact@traumweh.dev>"]
repository = "https://github.com/traumweh/duckypad_daemon"
homepage = "https://lilith.codes"
readme = "README.md"
edition = "2021"
license = "GPL-3.0"

[dependencies]
hidapi = "2.4.1"
dirs-next = "2.0.0"
active-win-pos-rs = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4.8", features = ["derive"] }
sysinfo = "0.29.10"
